Renamed $mainblue variable to mainGreen and fixed table reponsivness on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -61,7 +61,7 @@
 }
 .sector-button--active{
   background: #FFF;
-  border-right:2px solid $mainBlue ;
+  border-right:2px solid $mainGreen;
 }
 
 .text-box{
