--- a/assets/css/homepage/main.scss
+++ b/assets/css/homepage/main.scss
@@ -3,11 +3,11 @@
 }
 
 .fa-map-marker-alt{
-  color: $mainBlue;
+  color: $mainGreen;
 }
 
 .fa-calendar-alt{
-  color: $mainBlue;
+  color: $mainGreen;
 }
 
 .home-start {
@@ -54,7 +54,7 @@
 }
 
 .heading--blue-border {
-  border-bottom: 1px solid $mainBlue;
+  border-bottom: 1px solid $mainGreen;
 }
 
 .event {
@@ -95,10 +95,10 @@
   border-radius: 50px;
   font-size: 16px;
   color: #fff;
-  background-color: $mainBlue;
+  background-color: $mainGreen;
   transition: 0.5s;
   &:hover {
-    background-color: darken($mainBlue, 8%);
+    background-color: darken($mainGreen, 8%);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
     color: #fff;
   }
@@ -114,11 +114,11 @@
 }
 
 .button__blue-transparent {
-  background-color: $mainBlue;
-  border: 1px solid $mainBlue;
+  background-color: $mainGreen;
+  border: 1px solid $mainGreen;
 
   &:hover {
-    background-color: darken($mainBlue, 10%);
+    background-color: darken($mainGreen, 10%);
     color: #fff;
   }
 }
@@ -183,7 +183,7 @@
     border-radius: 2px;
     transition: 0.5s;
     &:hover {
-      border: 1px solid $mainBlue;
+      border: 1px solid $mainGreen;
       margin-top: -10px;
       box-shadow: none;
       border-radius: 0;
@@ -203,7 +203,7 @@
     width: 100%;
   }
   h2 {
-    border-bottom: 1px solid $mainBlue;
+    border-bottom: 1px solid $mainGreen;
     font-size: 50px;
   }
   .about-us-text-container {
@@ -238,7 +238,7 @@
 .contact-card {
   flex-basis: 30%;
   max-width: 30%;
-  background-color: $mainBlue;
+  background-color: $mainGreen;
   border-radius: 0;
   box-shadow: none;
   border: none;
@@ -267,5 +267,5 @@
 .event__line-container {
   margin: 40px;
   padding: 0 10px 40px 30px;
-  border-bottom: 1px solid $mainBlue;
+  border-bottom: 1px solid $mainGreen;
 }
