--- a/assets/css/homepage/mobile.scss
+++ b/assets/css/homepage/mobile.scss
@@ -4,6 +4,11 @@
 @media only screen
 and (max-device-width : 1024px)
 {
+  .page-name-container {
+    h2 {
+      margin-top: 20px;
+    }
+  }
 
   i.fa-bars{
     width: 50px;
@@ -70,18 +75,18 @@ and (max-device-width : 1024px)
     border-radius: 50px;
     font-size: 16px;
     color: #fff;
-    background-color: $mainBlue;
+    background-color: $mainGreen;
     margin: 0 auto;
     max-width: 250px;
   }
 
   .button__blue-transparent {
-    background-color:  $mainBlue;
-    border: 1px solid $mainBlue;
+    background-color: $mainGreen;
+    border: 1px solid $mainGreen;
 
     &:hover {
-      background-color: darken($mainBlue, 15%);
-      border: 1px solid darken($mainBlue, 15%);
+      background-color: darken($mainGreen, 15%);
+      border: 1px solid darken($mainGreen, 15%);
       color: #fff;
     }
   }
@@ -96,6 +101,12 @@ and (max-device-width : 1024px)
   .contact-card {
     flex-basis: 100%;
     min-width: 250px;
+  }
+  .table-container {
+
+    display: flex;
+    justify-content: flex-start;
+
   }
 }
 @media only screen
