--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,8 +9,8 @@ body, html {
 
 footer {
   color: white;
-  border-top: 1px solid $mainBlue;
-  background: $mainBlue;
+  border-top: 1px solid $mainGreen;
+  background: $mainGreen;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
