--- a/assets/css/navbar/navbar.scss
+++ b/assets/css/navbar/navbar.scss
@@ -4,7 +4,7 @@
     background-color:transparent;
      a{
        &:hover {
-         color: $mainBlue;
+         color: $mainGreen;
        }
      }
   }
@@ -17,7 +17,7 @@ ul.navbar-nav {
 .navbar__link--black {
   color: #000000;
   &:hover{
-    color: $mainBlue;
+    color: $mainGreen;
   }
 }
 
