--- a/assets/css/table/table.scss
+++ b/assets/css/table/table.scss
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 .table-head {
-  background-color: $mainBlue;
+  background-color: $mainGreen;
 }
 
 .tr--border-bottom--white {
@@ -18,7 +18,7 @@
   border: 1px solid #fff;
 }
 .thead-primary {
-    background-color: $mainBlue;
+    background-color: $mainGreen;
   th{
     color: #fff;
 
